// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineInputText renders an input with a placeholder 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  font: inherit;
  height: 100%;
  left: 0;
  outline: none;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
  width: 100%;
}

.c2 {
  color: #939BA5;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<div
  className="c0"
  data-testid="inlineInputText"
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="c2"
  >
    this is the placeholder
  </div>
</div>
`;

exports[`InlineInputText renders an input with no value 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  font: inherit;
  height: 100%;
  left: 0;
  outline: none;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
  width: 100%;
}

.c2 {
  color: #939BA5;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<div
  className="c0"
  data-testid="inlineInputText"
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="c2"
  >
     
  </div>
</div>
`;

exports[`InlineInputText renders an input with specific predefined value 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  font: inherit;
  height: 100%;
  left: 0;
  outline: none;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
  width: 100%;
}

.c2 {
  color: transparent;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<div
  className="c0"
  data-testid="inlineInputText"
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value="type here..."
  />
  <div
    className="c2"
  >
    type here...
  </div>
</div>
`;
